# charmer-rs

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  pixi.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
configuration/: index.html
crates/charmer/: Cargo.toml
crates/charmer-cli/: Cargo.toml
crates/charmer-cli/src/: lib.rs
crates/charmer-core/: Cargo.toml
crates/charmer-core/src/: lib.rs  main_log.rs  metadata.rs
crates/charmer-lsf/: Cargo.toml
crates/charmer-lsf/src/: bhist.rs  bjobs.rs  failure.rs  lib.rs  types.rs
crates/charmer-monitor/: Cargo.toml
crates/charmer-monitor/src/: app.rs  lib.rs
crates/charmer-monitor/src/components/: dag_view.rs  footer.rs  header.rs  job_detail.rs  job_list.rs  log_viewer.rs  mod.rs  rule_summary.rs  view_tabs.rs
crates/charmer-monitor/src/ui/: mod.rs  theme.rs
crates/charmer-parsers/: Cargo.toml
crates/charmer-parsers/src/: command.rs  lib.rs  memory.rs  time.rs
crates/charmer-runs/: Cargo.toml
crates/charmer-runs/src/: lib.rs  store.rs  types.rs
crates/charmer-slurm/: Cargo.toml
crates/charmer-slurm/src/: failure.rs  lib.rs  sacct.rs  squeue.rs  types.rs
crates/charmer-state/: Cargo.toml
crates/charmer-state/src/: lib.rs  merge.rs  types.rs
crates/charmer-state/src/merge/: comment.rs  correlation.rs  lsf.rs  mod.rs  slurm.rs  snakemake.rs
crates/charmer/src/: main.rs  polling.rs  watcher.rs
docs/: configuration.md  index.md  installation.md  usage.md
docs/api/: index.md
docs/dev/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: configuration.md  lsf.md  shortcuts.md  slurm.md
docs/images/: demo.webm
docs/tapes/: demo.tape  generate.sh  quickstart.tape
ext/: snakemake
installation/: index.html
search/: search_index.json
tapes/: generate.sh
tests/pipelines/cluster/: .gitignore  Snakefile
tests/pipelines/cluster/cluster/lsf/: config.yaml
tests/pipelines/cluster/cluster/slurm/: config.yaml
tests/pipelines/cluster/config/: config.yaml  samples.yaml
tests/pipelines/demo/: .gitignore  Snakefile
tests/pipelines/simple/: .gitignore  Snakefile
tests/pipelines/simple/profile/: config.yaml
usage/: index.html
vhs/: demo.tape  quickstart.tape
