[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Jay Hesselberth"]

[workspace.dependencies]
# TUI
ratatui = "0.30.0-beta.0"
crossterm = "0.29"

# Async
tokio = { version = "1.43", features = ["full"] }

# File watching
notify = "8.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Paths
camino = { version = "1.1", features = ["serde1"] }

# Regex for parsing
regex = "1.11"

# Base64 for snakemake filenames
base64 = "0.22"

# Error handling
thiserror = "2.0"
miette = { version = "7.4", features = ["fancy"] }

# Clipboard
arboard = "3"

# Internal crates
charmer-core = { path = "crates/charmer-core" }
charmer-parsers = { path = "crates/charmer-parsers" }
charmer-slurm = { path = "crates/charmer-slurm" }
charmer-lsf = { path = "crates/charmer-lsf" }
charmer-state = { path = "crates/charmer-state" }
charmer-monitor = { path = "crates/charmer-monitor" }
charmer-cli = { path = "crates/charmer-cli" }
