[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Jay Hesselberth"]

[workspace.dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1.48", features = ["full"] }

# File watching
notify = "8.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Paths
camino = { version = "1.2", features = ["serde1"] }

# Regex for parsing
regex = "1.12"
once_cell = "1.21"

# Base64 for snakemake filenames
base64 = "0.22"

# Error handling
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

# Logging
tracing = "0.1"

# Clipboard
arboard = "3"

# Internal crates
charmer-core = { path = "crates/charmer-core" }
charmer-parsers = { path = "crates/charmer-parsers" }
charmer-slurm = { path = "crates/charmer-slurm" }
charmer-lsf = { path = "crates/charmer-lsf" }
charmer-state = { path = "crates/charmer-state" }
charmer-monitor = { path = "crates/charmer-monitor" }
charmer-cli = { path = "crates/charmer-cli" }
charmer-runs = { path = "crates/charmer-runs" }

# Optimize release builds for size and performance
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Faster debug builds with optimized dependencies
[profile.dev.package."*"]
opt-level = 2

# Profile for maximum size reduction (use with --profile release-small)
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
