[package]
name = "charmer-runs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
camino.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
