[package]
name = "charmer-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
charmer-core.workspace = true
charmer-slurm.workspace = true
charmer-lsf.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
camino.workspace = true
thiserror.workspace = true
regex.workspace = true
